image detection working

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -17,8 +17,9 @@
         <h1>C02nsume</h1>
       </header>
 
-      <form method="get" action="/detect">
-          <p><input type="file"  accept="image/*" name="image" id="file"  onclick="det()" onchange="loadFile(event)"></p>
+      <form method="post" action="/upload" enctype="multipart/form-data">
+          <p><input type="file"  accept="image/*" name="photo" id="file" onchange="loadFile(event)"></p>
+          <input class="btn mt-3" type="submit" value="upload">
           <p><img id="output" width="200" /></p>
       </form>
 
@@ -26,7 +27,7 @@
      </div>
      <script>
         function det() {
-        fetch('/detect').then(function(response) {
+        fetch('/upload').then(function(response) {
         //do something with response
         })
         }
