--- a/views/pages/upload.ejs
+++ b/views/pages/upload.ejs
@@ -16,18 +16,6 @@
       <header>
         <h1>C02nsume</h1>
       </header>
-
-      <form method="post" action="/upload" enctype="multipart/form-data">
-          <p><input type="file"  accept="image/*" name="photo" id="file" onchange="loadFile(event)"></p>
-          <input class="btn mt-3" type="submit" value="upload">
-          <p><img id="output" width="200" /></p>
-      </form>
-     </div>
-     <script>
-        function loadFile(event) {
-        var image = document.getElementById('output');
-        image.src = URL.createObjectURL(event.target.files[0]);
-        }
-     </script>
+      <img src=<%=imgsrc%> id="photo" class="img-responsive"/>
     </body>
 </html>
