text with food id added

--- a/views/pages/upload.ejs
+++ b/views/pages/upload.ejs
@@ -16,6 +16,7 @@
       <header>
         <h1>C02nsume</h1>
       </header>
-      <img src=<%=imgsrc%> id="photo" class="img-responsive"/>
+      <p><%=output%></p>
+      <img width=400 src=<%=imgsrc%> id="photo" class="img-responsive"/>
     </body>
 </html>
