--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,4 +1,4 @@
-:root {
+ :root {
     --green: #66a381;
     --darkgreen: #304d3d;
     --white: #fff8e3;
@@ -36,4 +36,80 @@ h1{
     .container{
         width:40%;
     }
+} 
+
+ 
+ .cameraControls {
+    position: absolute;
+    bottom: 10vh;
+    width: 100%;
+    z-index: 99999;
+    background: transparent;
+    opacity: 0.7;
+    padding: 10px;
+  }
+  
+  
+  .material-icons{
+    width: 100px;
+    font-size: 25px !important;
+    color: white;
+    width: 80px;
+    height: 80px;
+    background-color: black;
+    border-radius: 50%;
+    padding-top: 15px;
+    margin: 0 10px;
+  }
+ 
+  
+  #canvas{
+    background-color: transparent;
+    position: absolute;
+    width: auto;
+    height: 100vh;
+    z-index: 9999;
+    margin: auto;
+    top: 0;
+    left: 0;
+    right: 0;
+    margin-left: auto;
+    margin-right: auto;
+  } 
+
+  @media screen and (min-width: 768px) {
+    #errorMsg {
+        position: fixed;
+        top: 32vh;
+        left: 20vw;
+        padding: 20px;
+        z-index: 999999;
+    }
+ }
+ 
+@media screen and (max-width: 420px) {
+  .form-control.webcam-start{
+    width: 300px;
+  }
 }
+
+@media screen and (max-width: 767px) {
+  .cameraControls {
+    bottom: 25vh;
+  }
+}
+
+@media screen and (min-width: 420px) and (max-width: 767px) {
+  .form-control.webcam-on {
+    top: 17vh;
+    left: 0;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .form-control.webcam-on {
+    top: 16vh;
+    left: 8vw;
+  }
+} 
+
