--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -9,6 +9,11 @@
         <link rel="stylesheet" href="/css/styles.css">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400&display=swap" rel="stylesheet">
+
+        <script type="text/javascript" src="https://unpkg.com/webcam-easy/dist/webcam-easy.min.js"></script>
+       <!--  <script language="JavaScript" type="text/javascript" src="//code.jquery.com/jquery-3.3.1.min.js"></script>
+        <script src='../../routes/app.js'></script> -->
+        
     </head>
     
     <body>
@@ -22,12 +27,70 @@
           <input class="btn mt-3" type="submit" value="upload">
           <p><img id="output" width="200" /></p>
       </form>
+
+      <main id="webcam-app">
+<!--         <div class="form-control webcam-start" id="webcam-control">
+                <label class="form-switch">
+                <input type="checkbox" id="webcam-switch">
+                <i></i> 
+                <span id="webcam-caption">Click to Start Camera</span>
+                </label>      
+                <button id="cameraFlip" class="btn d-none"></button>                  
+        </div>
+        
+        <div id="errorMsg" class="col-12 col-md-6 alert-danger d-none">
+            Fail to start camera, please allow permision to access camera. <br/>
+            If you are browsing through social media built in browsers, you would need to open the page in Sarafi (iPhone)/ Chrome (Android)
+            <button id="closeError" class="btn btn-primary ml-3">OK</button>
+        </div>  -->
+        <div class="md-modal md-effect-12">
+            <div id="app-panel" class="app-panel md-content row p-0 m-0">     
+                <div id="webcam-container" class="webcam-container col-12 d-none p-0 m-0">
+                    <video id="webcam" autoplay playsinline width="640" height="480"></video>
+                    <canvas id="canvas" class="d-none"></canvas>
+                    <div class="flash"></div>
+                    <audio id="snapSound" src="audio/snap.wav" preload = "auto"></audio>
+                </div>
+                <div id="cameraControls" class="cameraControls">
+                    <a href="#" id="exit-app" title="Exit App" class="d-none"><i class="material-icons">exit_to_app</i></a> 
+                    <a href="#" id="take-photo" title="Take Photo"><i class="material-icons">camera_alt</i></a>
+                    <a href="#" id="download-photo" download="selfie.png" target="_blank" title="Save Photo" class="d-none"><i class="material-icons">Download</i></a>  
+                    <a href="#" id="resume-camera"  title="Resume Camera" class="d-none"><i class="material-icons">Back</i></a>
+                </div>
+            </div>        
+        </div>
+        <div class="md-overlay"></div>
+
+        
+
+    </main>
+    
+
      </div>
      <script>
         function loadFile(event) {
         var image = document.getElementById('output');
         image.src = URL.createObjectURL(event.target.files[0]);
         }
+
+        const webcamElement = document.getElementById('webcam');
+        const canvasElement = document.getElementById('canvas');
+        const snapSoundElement = document.getElementById('snapSound');
+        const webcam = new Webcam(webcamElement, 'user', canvasElement, snapSoundElement);
+
+        webcam.start()
+        .then(result =>{
+            console.log("webcam started");
+        })
+        .catch(err => {
+            console.log(err);
+        });
+
+
+        let picture = webcam.snap();
+        document.querySelector('#download-photo').href = picture;
+        
      </script>
+     <script src='../../routes/app.js'></script>
     </body>
 </html>
