create progress bar screen: loading.ejs

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -17,7 +17,7 @@
         <h1>C02nsume</h1>
       </header>
 
-      <form method="post" action="/upload" enctype="multipart/form-data">
+      <form method="post" action="/loading" enctype="multipart/form-data">
           <p><input type="file"  accept="image/*" name="photo" id="file" onchange="loadFile(event)"></p>
           <input class="btn mt-3" type="submit" value="upload">
           <p><img id="output" width="200" /></p>
