--- a/views/pages/loading.ejs
+++ b/views/pages/loading.ejs
@@ -9,6 +9,11 @@
         <link rel="stylesheet" href="/css/styles.css">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400&display=swap" rel="stylesheet">
+        <script
+            src="https://code.jquery.com/jquery-3.3.1.min.js"
+            integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+            crossorigin="anonymous">
+        </script>
     </head>
     
     <body>
@@ -22,32 +27,35 @@
         <div><p id="text">Processing your image</p></div>
      </div>
      <script>
+         window.onload = function() {
+            $.ajax({ url: '/loading',
+                type: 'GET'
+            })
+            .fail(function() {
+                console.log("Something went wrong!");
+            });
 
-        // $.ajax({ url: '/upload',
-        //     type: 'GET'
-        //     })
-        // .fail(function() {
-        //     console.log("Something went wrong!");
-        // });
-
-         const progressBar = document.getElementsByClassName('progressBar')[0];
-         var timesRun = 0;
-         var intervalId = setInterval(() => {
-             timesRun += 1;
-             const computedStyle = getComputedStyle(progressBar);
-             const width = parseFloat(computedStyle.getPropertyValue('--width')) || 0;
-             progressBar.style.setProperty('--width', width + 0.1);
-             if(timesRun > 250){
-                document.getElementById('text').innerText = "Sending your image through the networks";
-            }
-            if(timesRun > 500){
-                document.getElementById('text').innerText = "Scanning for food items";
-            }
-             if(timesRun > 800){
-                clearInterval(intervalId);
-                document.getElementById('text').innerText = "Adding the final touches now!";
-            }
-         }, 25);
+            const progressBar = document.getElementsByClassName('progressBar')[0];
+            var timesRun = 0;
+            var intervalId = setInterval(() => {
+                const computedStyle = getComputedStyle(progressBar);
+                const width = parseFloat(computedStyle.getPropertyValue('--width')) || 0;
+                progressBar.style.setProperty('--width', width + 0.1);
+                if(timesRun > 100){
+                    document.getElementById('text').innerText = "Sending your image through the networks";
+                }
+                if(timesRun > 250){
+                    document.getElementById('text').innerText = "Scanning for food items";
+                }
+                if(timesRun > 400){
+                    clearInterval(intervalId);
+                    document.getElementById('text').innerText = "Adding the final touches now!";
+                }
+                timesRun += 1;
+            }, 1);
+            return;
+         }
+        
      </script>
     </body>
 </html>
