--- a/views/pages/upload.ejs
+++ b/views/pages/upload.ejs
@@ -16,7 +16,10 @@
       <header>
         <h1>C02nsume</h1>
       </header>
-      <p><%=output%></p>
+
+      <p id='output'><%= output %></p>
       <img width=400 src=<%=imgsrc%> id="photo" class="img-responsive"/>
+
     </body>
+
 </html>
