--- a/views/pages/upload.ejs
+++ b/views/pages/upload.ejs
@@ -18,7 +18,7 @@
       </header>
 
       <p id='output'><%= output %></p>
-      <img width=400 src=<%=imgsrc%> id="photo" class="img-responsive"/>
+      <img height=400 width=400 src=<%=imgsrc%> id="photo" class="img-responsive"/>
 
     </body>
 
