--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -39,6 +39,7 @@
 		<div class="login-form">
 			<h1>Login Form</h1>
 			<form action="auth" method="POST">
+				<input type="text" name="username" placeholder="Username" required>
 				<input type="text" name="first" placeholder="First Name" required>
 				<input type="password" name="password" placeholder="Password" required>
 				<input type="submit">
