--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -26,20 +26,25 @@ h1{
 }
 
 .container{
-    margin: 0;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-    width: 100vw;
-    padding:10px;
-    height: 100vh;
-    background-color: var(--white);
-    
-    text-align: center;
-    border-radius: 17px;
-    box-shadow: 5px 15px 45px var(--containershadow);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  width: 100vw;
+  padding:10px;
+  height: 100vh;
+  background-color: var(--white);
+  
+  text-align: center;
+  border-radius: 17px;
+  box-shadow: 5px 15px 45px var(--containershadow);
 
 }
 
@@ -70,28 +75,6 @@ h1{
 }
 
 /* LOGIN */
-.login-container{
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-
-  margin: 0;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -ms-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-  width: 100vw;
-  padding:10px;
-  height: 100vh;
-  background-color: var(--white);
-  
-  text-align: center;
-  border-radius: 17px;
-  box-shadow: 5px 15px 45px var(--containershadow);
-}
-
 .login-form {
   width: 300px;
   margin: auto;
@@ -147,8 +130,8 @@ h1{
     width: 85%;
     height: 3em;
     margin: auto;
-    margin-top: 00px;
-    background-image: linear-gradient(to top right,var(--darkgreen),var(--green));
+    margin-top: 400px;
+    background-image: linear-gradient(to top right,var(--button),var(--buttonshadow));
     border-radius: 1.5em;
 }
 
@@ -163,7 +146,7 @@ h1{
     min-width: .2rem;
     max-width: calc(85% - 1em);
     width: calc(var(--width, 0) * 1%);
-    background-image: linear-gradient(to top right,var(--green),var(--white));
+    background-image: linear-gradient(to top right,var(--offwhite),var(--white));
     border-radius: 1em;
     padding: 1em;
 }
@@ -176,12 +159,6 @@ h1{
         height: 95vh;
         min-height: 715px;
     }
-    .login-container{
-      width:40vw;
-      min-width: 600px;
-      height: 95vh;
-      min-height: 715px;
-  }
 } 
 
 @media screen and (min-width: 768px) {
