--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -6,7 +6,7 @@
 		<link rel="stylesheet" href="/css/styles.css">
 	</head>
 	<body>
-		<div class="login-container">
+		<div class="container">
 			<div class="login">
 				<img class="logo" src="/icons/logo.png" height="200px">
 				<div class="login-form">
