--- a/views/pages/loading.ejs
+++ b/views/pages/loading.ejs
@@ -11,6 +11,9 @@
     
     <body>
      <div class="container">
+        <div class="back">
+            <a href="/index" id="exit-app" title="Back to Login" class="button back"><i class="material-icons">arrow_back</i></a>             
+       </div>
         <div class="progressBar"></div>
         <div><p id="text">Processing your image</p></div>
         <form id="f" method="post" action="/loading"></form>
