--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -2,14 +2,14 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>Login Form Tutorial</title>
+		<title>CO2nsume</title>
 		<link rel="stylesheet" href="/css/styles.css">
 	</head>
 	<body>
 		<div class="container">
 			<img class="logo" src="/icons/logo.png" height="80px">
 			<div class="login">
-				<div class="login-form">
+				<div class="form">
 					<form action="auth" method="POST">
 						<input class="login-text" type="text" name="username" placeholder="Username" required>
 						<input class="login-text" type="password" name="password" placeholder="Password" required>
