--- a/views/pages/signup.ejs
+++ b/views/pages/signup.ejs
@@ -2,8 +2,10 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>Sign up Form</title>
-		<style>
+		<title>Sign up</title>
+		<link rel="stylesheet" href="/css/styles.css">
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stylesheet">
+		<!-- <style>
         .signup-form {
 			width: 300px;
 			margin: 0 auto;
@@ -33,7 +35,7 @@
 			font-weight: bold;
 			color: #ffffff;
 		}
-		</style>
+		</style> -->
 		<script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
@@ -43,22 +45,18 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.js" type="text/javascript"></script>
 	</head>
 	<body>
-		<div class="registration-form">
-			<h1>Signup Form</h1>
-			<form class="signup-form" action="" method="POST" enctype="multipart/form-data">
-				<div class="form-group">
-					<input type="text" id="user-name" placeholder="Username" required>
-				</div>
-				<div class="form-group"> 
-					<input type="text" id="first-name" placeholder="First Name" required>
-				</div>
-				<div class="form-group"> 
-					<input type="text" id="last-name" placeholder="Last Name" required>
-				</div>
-				<div class="form-group"> 
-					<input type="password" id="password" placeholder="Password" required>
-				</div>
-                <button type="submit" class="btn" id="create-user-button"> Create </button>
+		<div class="container">
+			<div class="back">
+				<a href="/" id="exit-app" title="Back to Login" class="button back"><i class="material-icons">arrow_back</i></a>             
+		   </div>
+			<h1>Create an account</h1>
+			<form class="form signup-form" action="" method="POST" enctype="multipart/form-data">
+				<!-- insert an alert if username is not unique -->
+				<input type="text" id="user-name" placeholder="Username - must be unique" required>
+				<input type="text" id="first-name" placeholder="First Name" required>
+				<input type="text" id="last-name" placeholder="Last Name" required>
+				<input type="password" id="password" placeholder="Password" required>
+				<button type="submit" class="button create" id="create-user-button"> Create </button>               
             </form>
 		</div>
 		<script>
