--- a/views/pages/upload.ejs
+++ b/views/pages/upload.ejs
@@ -7,17 +7,87 @@
         <meta name="description" content="Rutgers University Electrical & Computer Engineering Dept Capstone Project Spring 2021">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="/css/styles.css">
-        <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stylesheet">
+        <script type="text/javascript" src="https://unpkg.com/webcam-easy/dist/webcam-easy.min.js"></script>        
     </head>
     
     <body>
      <div class="container">
+        <div class="back">
+             <a href="/" id="exit-app" title="Back to Login" class="button back"><i class="material-icons">arrow_back</i></a>             
+        </div>
 
-      <p id='output'><%= output %></p>
-      <img height=400 width=400 src=<%=imgsrc%> id="photo" class="img-responsive"/>
-      <p id='carbon_estimate'>Estimated amount of carbon is: <%= carbon_estimate %> kg</p>
+    <!-- <form method="post" action="/upload" enctype="multipart/form-data">
+        <p><input type="file" accept="image/*" name="photo" id="file" onchange="loadFile(event)"></p>
+        <input class="btn mt-3" type="submit" value="upload">
+        <p><img id="output" width="200" /></p>
+    </form> -->
 
+      <main id="webcam-app">
+        <div class="md-modal md-effect-12">
+            <div id="app-panel" class="app-panel md-content row p-0 m-0">     
+                <div id="webcam-container" class="webcam-container col-12 d-none p-0 m-0">
+                    <video id="webcam" autoplay playsinline width="400" height="400"></video>
+                    <canvas id="canvas" class="d-none"></canvas>
+                    <div class="flash"></div>
+                    <audio id="snapSound" src="https://unpkg.com/webcam-easy/demo/audio/snap.wav" preload = "auto"></audio>
+                </div>
+                <div id="cameraControls" class="cameraControls">
+                    <!-- <a href="/" id="exit-app" title="Exit App" class="d-none"><i class="material-icons">Back</i></a>  -->
+                    <form method="post" action="/upload">
+                        <input class="button upload" type="submit" value="Upload" id='upload'>
+                        <input class="captured" type="hidden" name="photo" id="photo" value="none">
+                    </form>
+                    <a class="button takephoto" href="#" id="take-photo" title="Take Photo" onclick="photo()">Take Photo</a>
+                    <a class="button retakephoto" href="/index" id="retake-photo" title="Retake Photo">Retake Photo</a>
+                </div>
+            </div>        
+        </div>
+        <div class="md-overlay"></div>
+
+        
+
+    </main>
+    
+
+     </div>
+     <script>
+        function loadFile(event) {
+            var image = document.getElementById('output');
+            image.src = URL.createObjectURL(event.target.files[0]);
+        }
+
+        const webcamElement = document.getElementById('webcam');
+        const canvasElement = document.getElementById('canvas');
+        const snapSoundElement = document.getElementById('snapSound');
+        const webcam = new Webcam(webcamElement, 'user', canvasElement, snapSoundElement);
+        const uploadButton = document.getElementById('upload');
+        const takephoto = document.getElementById('take-photo');
+        const retakephoto = document.getElementById('retake-photo');
+        
+        uploadButton.style.display="none"
+        retakephoto.style.display="none"
+
+        webcam.start()
+        .then(result =>{
+            console.log("webcam started");
+        })
+        .catch(err => {
+            console.log(err);
+        });
+
+        function photo(){
+            var picture = webcam.snap();
+            //document.querySelector('#download-photo').href = picture; 
+            document.getElementById("photo").value=picture;
+            //alert(document.getElementById("photo").value);
+            webcam.stop();
+            webcamElement.style.display="none";
+            uploadButton.style.display="block";
+            retakephoto.style.display="block";
+            takephoto.style.display="none";
+        }
+        
+     </script>
     </body>
-
 </html>
