All placeholder pages connected to home & added back buttons to home.

--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -11,12 +11,12 @@
 			
 			<div class="home">
 				
-					<a class="buttonh" style="background-color: rgb(255, 140, 125);">Dining Hall Menu</a> <!--href="#/Action1" -->
-					<a class="buttonh" style="background-color: rgb(255, 140, 125);">Store</a>
-					<a class="buttonh" style="background-color: rgb(255, 140, 125);">Statistics</a>
+					<a href="/menu" class="buttonh" style="background-color: rgb(255, 140, 125);">Dining Hall Menu</a> 
+					<a href="/store" class="buttonh" style="background-color: rgb(255, 140, 125);">Store</a>
+					<a href="/stats" class="buttonh" style="background-color: rgb(255, 140, 125);">Statistics</a>
 					<a href="/upload" class="buttonh" style="background-color: rgb(255, 140, 125);">Camera</a>
-					<a class="buttonh" style="background-color: rgb(255, 140, 125);">Info</a>
-					<a class="buttonh" style="background-color: rgb(255, 140, 125);">Points</a>
+					<a href="/info" class="buttonh" style="background-color: rgb(255, 140, 125);">Info</a>
+					<a href="/points" class="buttonh" style="background-color: rgb(255, 140, 125);">Points</a>
 				
 
 			</div>
