--- a/views/pages/upload.ejs
+++ b/views/pages/upload.ejs
@@ -14,7 +14,7 @@
     <body>
      <div class="container">
         <div class="back">
-             <a href="/" id="exit-app" title="Back to Login" class="button back"><i class="material-icons">arrow_back</i></a>             
+             <a href="/home" id="exit-app" title="Back to Home" class="button back"><i class="material-icons">arrow_back</i></a>             
         </div>
 
     <!-- <form method="post" action="/upload" enctype="multipart/form-data">
