--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -7,19 +7,19 @@
 	</head>
 	<body>
 		<div class="container">
-			<h1home>Welcome Back</h1home>
 			
+			<h1home>Welcome Back</h1home>
 			<div class="home">
-				
-					<a href="/menu" class="buttonh" style="background-color: rgb(255, 140, 125);">Dining Hall Menu</a> 
-					<a href="/store" class="buttonh" style="background-color: rgb(255, 140, 125);">Store</a>
-					<a href="/stats" class="buttonh" style="background-color: rgb(255, 140, 125);">Statistics</a>
-					<a href="/upload" class="buttonh" style="background-color: rgb(255, 140, 125);">Camera</a>
-					<a href="/info" class="buttonh" style="background-color: rgb(255, 140, 125);">Info</a>
-					<a href="/points" class="buttonh" style="background-color: rgb(255, 140, 125);">Points</a>
-				
-
+					<a href="/menu" style="background-color: rgb(255, 140, 125);">Dining Hall Menu</a> 
+					<a href="/store" style="background-color: rgb(255, 140, 125);">Store</a>
+					<a href="/stats" style="background-color: rgb(255, 140, 125);">Statistics</a>
+					<a href="/upload"  style="background-color: rgb(255, 140, 125);">Camera</a>
+					<a href="/info" style="background-color: rgb(255, 140, 125);">Info</a>
+					<a href="/points"  style="background-color: rgb(255, 140, 125);">Points</a>
 			</div>
+			<div class="logout">
+				<a href="/logout"  style="background-color: rgb(255, 140, 125);">Logout</a>
+			</div> 
 		</div>
 	</body>
 </html>
