--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -9,15 +9,17 @@
 		<div class="container">
 			<img class="logo" src="/icons/logo.png" height="80px">
 			<div class="login">
-				<div class="form">
-					<form action="auth" method="POST">
+				<form class="login-form" action="auth" method="POST">
+					<fieldset>
 						<input class="login-text" type="text" name="username" placeholder="Username" required>
 						<input class="login-text" type="password" name="password" placeholder="Password" required>
 						<input class="button loginb" type="submit" value="Log In">
-					</form>
-					<a class="button signup" href="/signup">Sign Up</a>
-				</div>
+					</fieldset>
+				</form>
+				<a class="button signup" href="/signup">Sign Up</a>
 			</div>
+				
+
 		</div>
 	</body>
 </html>
