--- a/views/pages/loading.ejs
+++ b/views/pages/loading.ejs
@@ -7,12 +7,13 @@
         <meta name="description" content="Rutgers University Electrical & Computer Engineering Dept Capstone Project Spring 2021">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="/css/styles.css">
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stylesheet">
     </head>
     
     <body>
      <div class="container">
         <div class="back">
-            <a href="/index" id="exit-app" title="Back to Login" class="button back"><i class="material-icons">arrow_back</i></a>             
+            <a href="/index" id="exit-app" title="Back to Login" class="back"><i class="material-icons">arrow_back</i></a>             
        </div>
         <div class="progressBar"></div>
         <div><p id="text">Processing your image</p></div>
