Populated food log page with user data.

--- a/views/pages/foodlog.ejs
+++ b/views/pages/foodlog.ejs
@@ -12,7 +12,9 @@
 				<a href="/home" id="exit-app" title="Back to Home" class="button back"><i class="material-icons">arrow_back</i></a>      
 		   </div>
 			<h1home>Food Log</h1home>
-			<h4>foodie diaries!</h4>
+			<div class="card">
+				<%- include('../partials/userFoodLog') %>
+			</div>
 		</div>
 	</body>
 </html>
