--- a/views/pages/info.ejs
+++ b/views/pages/info.ejs
@@ -10,7 +10,7 @@
 	<body>
 		<div class="container">
 			<div class="back">
-				<a href="/home" id="exit-app" title="Back to Home" class="button back"><i class="material-icons">arrow_back</i></a>      
+				<a href="/home" id="exit-app" title="Back to Home" class="icon"><i class="material-icons">arrow_back</i></a>      
 		   </div>
 			<h1home>Information</h1home>
 			<h4>CO2 bad for Earth. Junk food bad for Earth. YOU bad for Earth. CO2nsume will fix. THE END.</h4>
