--- a/views/pages/menu.ejs
+++ b/views/pages/menu.ejs
@@ -10,7 +10,7 @@
 	<body>
 		<div class="container">
 			<div class="back">
-				<a href="/home" id="exit-app" title="Back to Home" class="button back"><i class="material-icons">arrow_back</i></a>       
+				<a href="/home" id="exit-app" title="Back to Home" class="icon"><i class="material-icons">arrow_back</i></a>      
 		   </div>
 			<h1home>Dining Hall Menu Suggestions</h1home>
 			<h4>Helping you pick the best of the worst food :)</h4>
