--- a/views/pages/stats.ejs
+++ b/views/pages/stats.ejs
@@ -10,9 +10,9 @@
 	<body>
 		<div class="container">
 			<div class="back">
-				<a href="/home" id="exit-app" title="Back to Home" class="button back"><i class="material-icons">arrow_back</i></a>      
+				<a href="/home" id="exit-app" title="Back to Home" class="icon"><i class="material-icons">arrow_back</i></a>      
 		   </div>
-			<h1home>Statistics</h1home>
+			<h1>Statistics</h1>
 			<div class="card">
 				<%- include('../partials/CO2perWeek') %>
 			</div>
