--- a/views/pages/foodlog.ejs
+++ b/views/pages/foodlog.ejs
@@ -9,9 +9,9 @@
 	<body>
 		<div class="container">
 			<div class="back">
-				<a href="/home" id="exit-app" title="Back to Home" class="button back"><i class="material-icons">arrow_back</i></a>      
+				<a href="/home" id="exit-app" title="Back to Home" class="icon"><i class="material-icons">arrow_back</i></a>      
 		   </div>
-			<h1home>Food Log</h1home>
+			<h1>Food Log</h1>
 			<div class="card">
 				<%- include('../partials/userFoodLog') %>
 			</div>
