--- a/views/pages/loading.ejs
+++ b/views/pages/loading.ejs
@@ -14,7 +14,7 @@
     <body>
      <div class="container">
         <div class="back">
-            <a href="/upload" id="exit-app" title="Upload Image" class="back"><i class="material-icons">arrow_back</i></a>             
+            <a href="/home" id="exit-app" title="Back to Home" class="icon"><i class="material-icons">arrow_back</i></a>      
        </div>
         <div class="progressBar"></div>
         <div><p id="text">Processing your image</p></div>
