--- a/views/pages/signup.ejs
+++ b/views/pages/signup.ejs
@@ -17,7 +17,7 @@
 	<body>
 		<div class="container">
 			<div class="back">
-				<a href="/" id="exit-app" title="Back to Login" class="back"><i class="material-icons">arrow_back</i></a>             
+				<a href="/home" id="exit-app" title="Back to Home" class="icon"><i class="material-icons">arrow_back</i></a>      
 		   </div>
 			<h1>Create an account</h1>
 			<form class="form signup-form" action="" method="POST" enctype="multipart/form-data">
