--- a/views/pages/upload.ejs
+++ b/views/pages/upload.ejs
@@ -14,8 +14,8 @@
     <body>
      <div class="container">
         <div class="back">
-             <a href="/home" id="exit-app" title="Back to Home" class="back"><i class="material-icons">arrow_back</i></a>             
-        </div>
+            <a href="/home" id="exit-app" title="Back to Home" class="icon"><i class="material-icons">arrow_back</i></a>      
+       </div>
       <main id="webcam-app">
         <div class="md-modal md-effect-12">
             <div id="app-panel" class="app-panel md-content row p-0 m-0">     
